deploy/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: escapp
  namespace: escapp
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: escapp
  type: ClusterIP
