deploy/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: escapp
  namespace: escapp
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:
    - hosts:
        - escape.bf-app.ch
      secretName: escapp-tls
  rules:
    - host: escape.bf-app.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: escapp
                port:
                  name: http
